--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "melio-backend",
   "version": "1.0.0",
+  "description": "Melio Social Network Backend",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "socket.io": "^4.6.0",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
+  },
+  "engines": {
+    "node": "18.x"
   }
 }
